tests/neg-custom-args/captures/sepchecks2.check
-- Error: tests/neg-custom-args/captures/sepchecks2.scala:14:10 --------------------------------------------------------
14 |  val x1: (Object^, Object^) = (c, c) // error
   |          ^^^^^^^^^^^^^^^^^^
   |          Separation failure in value x1's type (Object^, Object^²).
   |          One part,  Object^, hides capabilities  {c}.
   |          Another part,  Object^²,  captures capabilities  {c}.
   |          The two sets overlap at  {c}.
   |
   |          where:    ^  refers to a root capability in the type of value x1
   |                    ^² refers to a root capability in the type of value x1
-- Error: tests/neg-custom-args/captures/sepchecks2.scala:15:10 --------------------------------------------------------
15 |  val x2: (Object^, Object^{d}) = (d, d) // error
   |          ^^^^^^^^^^^^^^^^^^^^^
   |          Separation failure in value x2's type (Object^, Object^{d}).
   |          One part,  Object^, hides capabilities  {d}.
   |          Another part,  Object^{d},  captures capabilities  {d}.
   |          The two sets overlap at  {d}.
   |
   |          where:    ^ refers to a root capability in the type of value x2
-- Error: tests/neg-custom-args/captures/sepchecks2.scala:27:6 ---------------------------------------------------------
27 |  bar((c, c)) // error
   |      ^^^^^^
   |Separation failure in the argument's adapted type (Object^, Object^²).
   |One part,  Object^, hides capabilities  {c}.
   |Another part,  Object^²,  captures capabilities  {c}.
   |The two sets overlap at  {c}.
   |
   |where:    ^  refers to a root capability created in method Test6 when checking argument to parameter x of method bar
   |          ^² refers to a root capability created in method Test6 when checking argument to parameter x of method bar
-- Error: tests/neg-custom-args/captures/sepchecks2.scala:30:9 ---------------------------------------------------------
30 |  val x: (Object^, Object^{c}) = (d, c) // error
   |         ^^^^^^^^^^^^^^^^^^^^^
   |         Separation failure: value x's type (Object^, Object^{c}) hides parameter d.
   |         The parameter needs to be annotated with consume to allow this.
-- Error: tests/neg-custom-args/captures/sepchecks2.scala:33:9 ---------------------------------------------------------
33 |  val x: (Object^, Object^) = (c, d) // error
   |         ^^^^^^^^^^^^^^^^^^
   |         Separation failure: value x's type (Object^, Object^) hides parameters c and d.
   |         The parameters need to be annotated with consume to allow this.
